More fixes for forms on mobile

--- a/grunt/sass/toolkit/components/_form.scss
+++ b/grunt/sass/toolkit/components/_form.scss
@@ -127,6 +127,12 @@
     button {
       margin: 16px 0 0 0;
     }
+
+    .no-label {
+      label {
+        display: inline;
+      }
+    }
   }
 }
 
